# maniskill_elirobots

./: .gitignore  README.md  board.sh  pyproject.toml  run.sh  train.sh
.devcontainer/cpu/: Dockerfile  devcontainer.json
.devcontainer/gpu/: Dockerfile
.devcontainer/gpu-cuda/: Dockerfile  devcontainer.json
.devcontainer/gpu-rocm/: Dockerfile  alt.Dockerfile  devcontainer.json
.openblas/: openblas.pc
src/maniskill_elirobots/: __init__.py  dual_ec63.py  ec63.py
src/maniskill_elirobots/assets/dual_ec63/: dual_ec63_description.urdf
src/maniskill_elirobots/assets/ec63/: ec63_description.urdf
src/maniskill_elirobots/robots/: __init__.py  dual_ec63.py  ec63.py  panda.py
src/maniskill_elirobots/scripts/: ppo.py
src/maniskill_elirobots/tasks/: __init__.py  push_cube_ec.py
src/maniskill_elirobots/trainer/: ppo.py  ppo_cleanrl.py  ppo_rlib.py
src/maniskill_elirobots/utils/: __init__.py  cli.py
