[project]
name = "maniskill-elirobots"
version = "0.1.0"
description = ""
authors = [{ name = "Felipe Gomes de Melo" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch>=2.10.0,<3.0.0",
    "mani-skill>=3.0.0b22,<4.0.0",
    "setuptools==81.0.0",
    "tensorboard>=2.20.0",
    "pytest>=9.0.2,<10.0.0",
]

[tool.uv]
exclude-dependencies = ["torch"]

[project.scripts]
show-robot = "maniskill_elirobots.robots.ec63:_script"

[tool.ruff]
# Same as Black.
line-length = 256
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "ERA", "RUF012", "T201", "C408"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.basedpyright]
reportUnannotatedClassAttribute = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportArgumentType = false
reportUntypedClassDecorator = false
reportMissingTypeStubs = false

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
